# rock-paper-scissors

./: .gitignore  README.md
docker/: Dockerfile  build-docker.bat
src/: CMakeLists.txt
src/ai/: CMakeLists.txt  Strategy.cpp  Strategy.hpp  remarks.txt  sampling.cpp  sampling.hpp
src/app/: AiPlayer.hpp  CMakeLists.txt  Game.cpp  Game.hpp  GameApp.cpp  GameApp.hpp  GameSelectCommandParsers.hpp  MoveCommandParsers.cpp  MoveCommandParsers.hpp  MoveParserCommands.hpp  Optional.hpp  main.cpp  prompt.hpp
src/game/: CMakeLists.txt  GameHistory.hpp  Move.cpp  Move.hpp  Player.hpp  game.cpp
src/parser/: Commands.hpp  EchoCommand.hpp  Parser.cpp  Parser.hpp
src/tests/: tests.cpp
